Downgrade the java version to 17