@@ -15,7 +15,7 @@
     <description>iam-api</description>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
         <org.keycloak.version>22.0.5</org.keycloak.version>
         <org.mapstruct.version>1.6.0.Beta1</org.mapstruct.version>
         <org.springframework.cloud.version>4.0.1</org.springframework.cloud.version>
@@ -115,8 +115,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
@@ -138,7 +136,6 @@
                     </annotationProcessorPaths>
                     <compilerArgs>
                         <arg>-Amapstruct.defaultComponentModel=spring</arg>
-                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -146,7 +143,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArguments>--enable-preview</jvmArguments>
                     <profiles>
                         <profile>dev</profile>
                     </profiles>
